infra/k8s/services.yml
apiVersion: v1
kind: Service
metadata:
  name: ci-cd-practice-server-service
spec:
  selector:
    app: ci-cd-practice-server
  ports:
    - port: 3001
      protocol: TCP
      targetPort: 3001
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: ci-cd-practice-webapp-service
spec:
  selector:
    app: ci-cd-practice-webapp
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
